fix: set body background image size to cover to avoid image distortion on different screens

--- a/fancy-weather/src/sass/layout/_body.scss
+++ b/fancy-weather/src/sass/layout/_body.scss
@@ -1,6 +1,6 @@
 body {
   height: 100%;
   background: #000000;
-  background-size: 100% 100vh;
+  background-size: cover;
   background-repeat: no-repeat;
 }
